@@ -16,7 +16,14 @@
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-bom</artifactId>
-                <version>11.0.11</version>
+                <version>11.0.12</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-parent</artifactId>
+                <version>2.0.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -66,22 +73,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.0</version>
                 <configuration>
-                    <!-- TODO Can't use ECJ until multi-release jar support is fixed 
-                        https://github.com/eclipse-jdt/eclipse.jdt.core/pull/61 -->
-                    <!--<compilerId>eclipse</compilerId>-->
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-compiler-eclipse</artifactId>
-                        <version>2.12.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.eclipse.jdt</groupId>
-                        <artifactId>ecj</artifactId>
-                        <version>3.30.0</version>
-                    </dependency>
-                </dependencies>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -174,8 +172,8 @@
         <dependency>
             <!-- Self-signed cert generation -->
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.70</version>
+            <artifactId>bcpkix-jdk18on</artifactId>
+            <version>1.72</version>
         </dependency>
 
         <!-- Content manipulation and generation -->
@@ -222,28 +220,78 @@
             <!-- Database (in-memory or file system) -->
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>2.6.1</version>
+            <version>2.7.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.permazen</groupId>
+            <artifactId>permazen-main</artifactId>
+            <version>4.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>io.permazen</groupId>
+            <artifactId>permazen-kv-mvstore</artifactId>
+            <version>4.1.9</version>
         </dependency>
         
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.0-alpha7</version>
         </dependency>
         <dependency>
             <!-- Log to stdout -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.0-alpha7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <!-- Log OpenJDK messages (but not all of them) to SLF4J -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk-platform-logging</artifactId>
-            <version>2.0.0-alpha7</version>
+            <version>2.0.0</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.ritzow</groupId>
+            <artifactId>cert-manage-library</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.xodus</groupId>
+            <artifactId>xodus-entity-store</artifactId>
+            <version>2.0.1</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2-mvstore</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>3.0.9</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.lmdbjava</groupId>
+            <artifactId>lmdbjava</artifactId>
+            <version>0.8.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
